--- a/app/src/main/res/layout/screen_add.xml
+++ b/app/src/main/res/layout/screen_add.xml
@@ -32,6 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/add"
+                android:id="@+id/tv_title"
                 android:textColor="@color/black"
                 android:layout_marginStart="16dp"
                 android:textSize="20sp"
