--- a/app/src/main/res/layout/screen_main.xml
+++ b/app/src/main/res/layout/screen_main.xml
@@ -31,7 +31,8 @@
                 android:layout_height="40dp"
                 android:layout_marginEnd="16dp"
                 android:padding="8dp"
-                android:src="@drawable/icon_more_vert_24"
+                android:id="@+id/iv_more"
+                android:src="@drawable/ic_delete_24"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
